--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,16 +13,16 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-17 Mon 20:57]
+#+CAPTION: Clock summary at [2017-07-17 Mon 21:05]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *0:25* |      |      | 100.0 |
+| *Total time*                                                                | *0:32* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 0:25   |      |      | 100.0 |
-| Active                                                                      |        | 0:25 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |  76.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:06 |  24.0 |
+| Stories                                                                     | 0:32   |      |      | 100.0 |
+| Active                                                                      |        | 0:32 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |  59.4 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:13 |  40.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -72,6 +72,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://www.linkedin.com/feed/update/urn:li:activity:6287627272706891776/][LinkedIn]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-07-17 Mon 20:58]--[2017-07-17 Mon 21:05] =>  0:07
     CLOCK: [2017-07-17 Mon 20:31]--[2017-07-17 Mon 20:37] =>  0:06
 
 Updates to sprint and product backlog.
