--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,16 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-17 Mon 21:05]
+#+CAPTION: Clock summary at [2017-07-18 Tue 17:47]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *0:32* |      |      | 100.0 |
+| *Total time*                                                                | *2:18* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 0:32   |      |      | 100.0 |
-| Active                                                                      |        | 0:32 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |  59.4 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:13 |  40.6 |
+| Stories                                                                     | 2:18   |      |      | 100.0 |
+| Active                                                                      |        | 2:18 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |  13.8 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  47.1 |
+| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   5.1 |
+| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  34.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -72,6 +74,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://www.linkedin.com/feed/update/urn:li:activity:6292938732865617920/][LinkedIn]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-07-18 Tue 17:13]--[2017-07-18 Tue 17:47] =>  0:34
     CLOCK: [2017-07-18 Tue 05:40]--[2017-07-18 Tue 05:58] =>  0:18
     CLOCK: [2017-07-17 Mon 20:58]--[2017-07-17 Mon 21:05] =>  0:07
     CLOCK: [2017-07-17 Mon 20:31]--[2017-07-17 Mon 20:37] =>  0:06
