--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-18 Tue 18:05]
+#+CAPTION: Clock summary at [2017-07-18 Tue 19:11]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *2:36* |      |      | 100.0 |
+| *Total time*                                                                | *2:56* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 2:36   |      |      | 100.0 |
-| Active                                                                      |        | 2:36 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |  12.2 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  41.7 |
-| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   4.5 |
-| STARTED Add meta-type support to yarn                                       |        |      | 0:18 |  11.5 |
-| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  30.1 |
+| Stories                                                                     | 2:56   |      |      | 100.0 |
+| Active                                                                      |        | 2:56 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |  10.8 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  36.9 |
+| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   4.0 |
+| STARTED Add meta-type support to yarn                                       |        |      | 0:38 |  21.6 |
+| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  26.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -103,6 +103,8 @@ Checklist:
 - update bintray with the correct release notes.
 
 *** STARTED Add meta-type support to yarn                             :story:
+    CLOCK: [2017-07-18 Tue 19:01]--[2017-07-18 Tue 19:11] =>  0:10
+    CLOCK: [2017-07-18 Tue 18:06]--[2017-07-18 Tue 18:16] =>  0:10
     CLOCK: [2017-07-18 Tue 17:47]--[2017-07-18 Tue 18:05] =>  0:18
 
 At present we are relying on type indexes to create containers of
