--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-18 Tue 19:11]
+#+CAPTION: Clock summary at [2017-07-19 Wed 19:20]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *2:56* |      |      | 100.0 |
+| *Total time*                                                                | *3:54* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 2:56   |      |      | 100.0 |
-| Active                                                                      |        | 2:56 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |  10.8 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  36.9 |
-| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   4.0 |
-| STARTED Add meta-type support to yarn                                       |        |      | 0:38 |  21.6 |
-| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  26.7 |
+| Stories                                                                     | 3:54   |      |      | 100.0 |
+| Active                                                                      |        | 3:54 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   8.1 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  27.8 |
+| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   3.0 |
+| STARTED Add meta-type support to yarn                                       |        |      | 1:36 |  41.0 |
+| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  20.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -103,6 +103,7 @@ Checklist:
 - update bintray with the correct release notes.
 
 *** STARTED Add meta-type support to yarn                             :story:
+    CLOCK: [2017-07-19 Wed 18:20]--[2017-07-19 Wed 19:18] =>  0:58
     CLOCK: [2017-07-18 Tue 19:01]--[2017-07-18 Tue 19:11] =>  0:10
     CLOCK: [2017-07-18 Tue 18:06]--[2017-07-18 Tue 18:16] =>  0:10
     CLOCK: [2017-07-18 Tue 17:47]--[2017-07-18 Tue 18:05] =>  0:18
@@ -135,11 +136,7 @@ but its also easy to do, so we'll go with it for now.
 Tasks:
 
 - add a new concept: =MetaNameable= with one property: =meta_name=.
-- create a =meta_name_factory= in meta-model which generates names for
-  elements. This can be simply hard-coded on the names,
-  e.g. =make_object_name=, etc.
-- update the frontends to set the meta-name when constructing the
-  elements.
+- create a transform to populate all of yarn's meta-types.
 - add a factory in each kernel's fabric to create meta-names for
   fabric elements.
 - update element construction in fabric to use factory.
@@ -148,6 +145,14 @@ Tasks:
 - update the archetype location containers that are using the type
   index to use the meta name's id.
 - remove any references to type index.
+
+Notes:
+
+- create a =meta_name_factory= in meta-model which generates names for
+  elements. This can be simply hard-coded on the names,
+  e.g. =make_object_name=, etc.
+- update the frontends to set the meta-name when constructing the
+  elements.
 
 *** STARTED Add canonical archetype support to yarn                   :story:
     CLOCK: [2017-07-18 Tue 07:28]--[2017-07-18 Tue 07:33] =>  0:05
@@ -176,6 +181,15 @@ Notes:
   index. Perhaps we should have a struct that aggregates both:
   archetype locations for meta-type? Or kernel can just return a
   =std::pair=.
+
+*** Rename transformers to adapters                                   :story:
+
+In the past we used the term "transformer" to mean a class that
+converts types from one representation to another. However, now that
+we are using domain terminology, the term "transforms" is taken to
+mean a model transformation. To avoid confusion we should rename the
+existing transformers to converters, adapters or some other
+out-of-the-way name.
 
 *** Add full support for type_index                                   :story:
 
