--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-19 Wed 20:04]
+#+CAPTION: Clock summary at [2017-07-19 Wed 20:33]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:33* |      |      | 100.0 |
+| *Total time*                                                                | *5:01* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:33   |      |      | 100.0 |
-| Active                                                                      |        | 4:33 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   7.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  23.8 |
-| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   2.6 |
-| STARTED Add meta-type support to yarn                                       |        |      | 2:15 |  49.5 |
-| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  17.2 |
+| Stories                                                                     | 5:01   |      |      | 100.0 |
+| Active                                                                      |        | 5:01 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   6.3 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  21.6 |
+| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   2.3 |
+| STARTED Add meta-type support to yarn                                       |        |      | 2:43 |  54.2 |
+| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  15.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -103,6 +103,7 @@ Checklist:
 - update bintray with the correct release notes.
 
 *** STARTED Add meta-type support to yarn                             :story:
+    CLOCK: [2017-07-19 Wed 20:05]--[2017-07-19 Wed 20:33] =>  0:28
     CLOCK: [2017-07-19 Wed 19:49]--[2017-07-19 Wed 20:04] =>  0:15
     CLOCK: [2017-07-19 Wed 19:24]--[2017-07-19 Wed 19:48] =>  0:24
     CLOCK: [2017-07-19 Wed 18:20]--[2017-07-19 Wed 19:18] =>  0:58
