--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-19 Wed 21:07]
+#+CAPTION: Clock summary at [2017-07-19 Wed 21:17]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *5:33* |      |      | 100.0 |
+| *Total time*                                                                | *5:42* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 5:33   |      |      | 100.0 |
-| Active                                                                      |        | 5:33 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   5.7 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  19.5 |
-| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   2.1 |
-| STARTED Add meta-type support to yarn                                       |        |      | 3:15 |  58.6 |
-| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  14.1 |
+| Stories                                                                     | 5:42   |      |      | 100.0 |
+| Active                                                                      |        | 5:42 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   5.6 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  19.0 |
+| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   2.0 |
+| STARTED Add meta-type support to yarn                                       |        |      | 3:24 |  59.6 |
+| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  13.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -103,6 +103,7 @@ Checklist:
 - update bintray with the correct release notes.
 
 *** STARTED Add meta-type support to yarn                             :story:
+    CLOCK: [2017-07-19 Wed 21:08]--[2017-07-19 Wed 21:17] =>  0:09
     CLOCK: [2017-07-19 Wed 20:52]--[2017-07-19 Wed 21:07] =>  0:15
     CLOCK: [2017-07-19 Wed 20:34]--[2017-07-19 Wed 20:51] =>  0:17
     CLOCK: [2017-07-19 Wed 20:05]--[2017-07-19 Wed 20:33] =>  0:28
@@ -144,7 +145,10 @@ Tasks:
 - create a transform to populate all of yarn's meta-types.
 - add a factory in each kernel's fabric to create meta-names for
   fabric elements.
-- populate model and global module meta-names
+- populate model and global module meta-names.
+- add validation rule to ensure meta-model name is not empty. We
+  cannot use the existing validation rules since meta-types will be
+  duplicated.
 - update element construction in fabric to use factory.
 - update formatters to return meta-name.
 - update the type index maps to use the meta-name's id instead.
