--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,19 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-19 Wed 21:17]
+#+CAPTION: Clock summary at [2017-07-20 Thu 07:19]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *5:42* |      |      | 100.0 |
+| *Total time*                                                                | *6:15* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 5:42   |      |      | 100.0 |
-| Active                                                                      |        | 5:42 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   5.6 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  19.0 |
-| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   2.0 |
-| STARTED Add meta-type support to yarn                                       |        |      | 3:24 |  59.6 |
-| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  13.7 |
+| Stories                                                                     | 6:15   |      |      | 100.0 |
+| Active                                                                      |        | 6:15 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   5.1 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  17.3 |
+| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   1.9 |
+| STARTED Add meta-type support to yarn                                       |        |      | 3:29 |  55.7 |
+| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  12.5 |
+| STARTED Tidy-up post-processing validation                                  |        |      | 0:28 |   7.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -103,6 +104,7 @@ Checklist:
 - update bintray with the correct release notes.
 
 *** STARTED Add meta-type support to yarn                             :story:
+    CLOCK: [2017-07-20 Thu 06:46]--[2017-07-20 Thu 06:51] =>  0:05
     CLOCK: [2017-07-19 Wed 21:08]--[2017-07-19 Wed 21:17] =>  0:09
     CLOCK: [2017-07-19 Wed 20:52]--[2017-07-19 Wed 21:07] =>  0:15
     CLOCK: [2017-07-19 Wed 20:34]--[2017-07-19 Wed 20:51] =>  0:17
@@ -193,6 +195,15 @@ Notes:
   index. Perhaps we should have a struct that aggregates both:
   archetype locations for meta-type? Or kernel can just return a
   =std::pair=.
+
+*** STARTED Tidy-up post-processing validation                        :story:
+    CLOCK: [2017-07-20 Thu 06:51]--[2017-07-20 Thu 07:19] =>  0:28
+
+Tasks:
+
+- use the traversal instead of rolling our own loop.
+- validate injected types too.
+- add validation for meta-model types.
 
 *** Rename transformers to adapters                                   :story:
 
