--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-20 Thu 07:19]
+#+CAPTION: Clock summary at [2017-07-20 Thu 07:32]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:15* |      |      | 100.0 |
+| *Total time*                                                                | *6:27* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:15   |      |      | 100.0 |
-| Active                                                                      |        | 6:15 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   5.1 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  17.3 |
-| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   1.9 |
-| STARTED Add meta-type support to yarn                                       |        |      | 3:29 |  55.7 |
-| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  12.5 |
-| STARTED Tidy-up post-processing validation                                  |        |      | 0:28 |   7.5 |
+| Stories                                                                     | 6:27   |      |      | 100.0 |
+| Active                                                                      |        | 6:27 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.9 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  16.8 |
+| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   1.8 |
+| STARTED Add meta-type support to yarn                                       |        |      | 3:29 |  54.0 |
+| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  12.1 |
+| STARTED Tidy-up post-processing validation                                  |        |      | 0:40 |  10.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -197,6 +197,7 @@ Notes:
   =std::pair=.
 
 *** STARTED Tidy-up post-processing validation                        :story:
+    CLOCK: [2017-07-20 Thu 07:20]--[2017-07-20 Thu 07:32] =>  0:12
     CLOCK: [2017-07-20 Thu 06:51]--[2017-07-20 Thu 07:19] =>  0:28
 
 Tasks:
