--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-23 Sun 11:50]
+#+CAPTION: Clock summary at [2017-07-23 Sun 12:17]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:02* |      |      | 100.0 |
+| *Total time*                                                                | *7:28* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:02   |      |      | 100.0 |
-| Active                                                                      |        | 7:02 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.5 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  15.4 |
-| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   1.7 |
-| STARTED Add meta-type support to yarn                                       |        |      | 4:04 |  57.8 |
-| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  11.1 |
-| STARTED Tidy-up post-processing validation                                  |        |      | 0:40 |   9.5 |
+| Stories                                                                     | 7:28   |      |      | 100.0 |
+| Active                                                                      |        | 7:28 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.2 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  14.5 |
+| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   1.6 |
+| STARTED Add meta-type support to yarn                                       |        |      | 4:30 |  60.3 |
+| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |  10.5 |
+| STARTED Tidy-up post-processing validation                                  |        |      | 0:40 |   8.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -105,6 +105,7 @@ Checklist:
 - update bintray with the correct release notes.
 
 *** STARTED Add meta-type support to yarn                             :story:
+    CLOCK: [2017-07-23 Sun 11:51]--[2017-07-23 Sun 12:17] =>  0:26
     CLOCK: [2017-07-23 Sun 11:15]--[2017-07-23 Sun 11:50] =>  0:35
     CLOCK: [2017-07-20 Thu 06:46]--[2017-07-20 Thu 06:51] =>  0:05
     CLOCK: [2017-07-19 Wed 21:08]--[2017-07-19 Wed 21:17] =>  0:09
