agile: minor sprint backlog grooming

--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-23 Sun 14:21]
+#+CAPTION: Clock summary at [2017-07-23 Sun 15:45]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *9:28* |      |      | 100.0 |
+| *Total time*                                                                | *9:41* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 9:28   |      |      | 100.0 |
-| Active                                                                      |        | 9:28 |      | 100.0 |
+| Stories                                                                     | 9:41   |      |      | 100.0 |
+| Active                                                                      |        | 9:41 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   3.3 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  11.4 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:18 |  13.4 |
 | COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   1.2 |
-| COMPLETED Tidy-up post-processing validation                                |        |      | 3:41 |  38.9 |
-| STARTED Add meta-type support to yarn                                       |        |      | 3:29 |  36.8 |
-| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |   8.3 |
+| COMPLETED Tidy-up post-processing validation                                |        |      | 3:41 |  38.0 |
+| STARTED Add meta-type support to yarn                                       |        |      | 3:29 |  36.0 |
+| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |   8.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -77,6 +77,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-07-23 Sun 15:32]--[2017-07-23 Sun 15:45] =>  0:13
     CLOCK: [2017-07-18 Tue 17:13]--[2017-07-18 Tue 17:47] =>  0:34
     CLOCK: [2017-07-18 Tue 05:40]--[2017-07-18 Tue 05:58] =>  0:18
     CLOCK: [2017-07-17 Mon 20:58]--[2017-07-17 Mon 21:05] =>  0:07
@@ -222,6 +223,34 @@ we are using domain terminology, the term "transforms" is taken to
 mean a model transformation. To avoid confusion we should rename the
 existing transformers to converters, adapters or some other
 out-of-the-way name.
+
+*** Add a modeline to stitch                                          :story:
+
+It would be nice to be able to supply the mode and other emacs
+properties to stitch templates. For that we just need a special KVP
+used at the top that contains the modeline:
+
+: <#@ modeline="-*- mode: poly-stitch; tab-width: 4; indent-tabs-mode: nil; -*-" #>
+
+Stitch can read this KVP and ignore it.
+
+*** Use namespaced stereotypes                                        :story:
+
+Originally we added a space in the ORM stereotypes:
+
+: orm value
+
+This is not a particularly good idea. We should just add support for
+namespaced stereotypes:
+
+: orm::value
+
+We should also change all of the existing stereotypes to have a
+namespace:
+
+: modeling::object
+
+And so forth. The namespace name probably needs a bit of thinking.
 
 *** Add full support for type_index                                   :story:
 
