--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-23 Sun 17:34]
+#+CAPTION: Clock summary at [2017-07-23 Sun 18:11]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *11:29* |       |      | 100.0 |
+| *Total time*                                                                | *12:05* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 11:29   |       |      | 100.0 |
-| Active                                                                      |         | 11:29 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.8 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:18 |  11.3 |
+| Stories                                                                     | 12:05   |       |      | 100.0 |
+| Active                                                                      |         | 12:05 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.6 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:18 |  10.8 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   1.0 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  32.1 |
-| STARTED Add meta-type support to yarn                                       |         |       | 5:17 |  46.0 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   6.8 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  30.5 |
+| STARTED Add meta-type support to yarn                                       |         |       | 5:53 |  48.7 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   6.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -123,6 +123,8 @@ Tasks:
 - add validation for meta-model types.
 
 *** STARTED Add meta-type support to yarn                             :story:
+    CLOCK: [2017-07-23 Sun 17:56]--[2017-07-23 Sun 18:11] =>  0:15
+    CLOCK: [2017-07-23 Sun 17:35]--[2017-07-23 Sun 17:56] =>  0:21
     CLOCK: [2017-07-23 Sun 15:46]--[2017-07-23 Sun 17:34] =>  1:48
     CLOCK: [2017-07-20 Thu 06:46]--[2017-07-20 Thu 06:51] =>  0:05
     CLOCK: [2017-07-19 Wed 21:08]--[2017-07-19 Wed 21:17] =>  0:09
